
(Tim Donohue)
- SF patch #1550606  more configurable RSS feeds, also moves text to Messages.properties
- SF patch #1544829  fixes SF bug #1544807 Browse-by-Subject/Author paging mechanism broken
- SF patch #1543969  fixes SF bug #1543966 "Special" groups inside groups bug
- SF patch #1550161  Fix HttpServletRequest encoding issues in 1.4

(Jonathan Champ)
- SF patch #1544089 fixes SF bug #1515148 community policies not deleting correctly

(Scott Yeadon)
- Fixed typo in 13-14 upgrade docs and checksum checker sql, and removed tasklist sql

(Claudia Juergen)
- SF patch #1514965 fixes SF bug #1505422. fix typo in SQL for item mapper
- SF patch #1516988  Deleting owner of mapped items SF bug #1196724
- SF patch #1517488  Access Bitstreams in Withdrawn Items SF bug #1408373
- SF patch #1490980  Fix for SF bugs #1456311, #1221954  Communities and Collections without name
- included some missing i18n tags
- SF patch #1490891  Submission Step 1 not authorized note and navigation back
- SF patch #1556316  for SF bugs #1552807, #1333269 and general deletion of Collection
- SF patch #1554669 Oracle fixes for Browse.java
- SF patch #1561292 for SF bug #1554064

(Richard Jones)
- SF bug #1515075. minor build file fix to copy correct config file

1.4 beta 1
==========
(Scott Phillips)
- Rework of DB code to use prepared statements for improved security and performance

(Lieven Droogmans, Ben Bosman)
- SF Patch #1468197 - Filter out mapped items from browse list, fixes bug #1455674 and addresses a symptom of bug #1456553

(Richard Jones)
- SF Patch #1458315 - Customisable Browse Index, fixes bug #1456227

(Robert Tansley)
- UNIQUE constraint applied to schema namespace + short_id (not element).
  Fixed bug SF #1460515.

(Lester Bowser, Robert Tansley)
- Fixes for Oracle database_schema.sql

(Scott Yeadon)
- Fix to QDCCrosswalk so type attribute is not ignored
- SF Patch #1469235 - default language is not applied, fixes bug #1358144 
- Show bundle names on item authorization page