@@ -537,6 +537,7 @@ jsp.home.com2 = Choose a community to browse its collections.
 jsp.home.search1 = Search
 jsp.home.search2 = Enter some text in the box below to search DSpace.
 jsp.home.title = Home
+jsp.home.feeds = RSS Feeds
 
 jsp.layout.footer-default.text = <a target="_blank" href="http://www.dspace.org/">DSpace Software</a> Copyright&nbsp;&copy;&nbsp;2002-2006&nbsp;<a target="_blank" href="http://web.mit.edu/">MIT</a>&nbsp;and&nbsp;<a target="_blank" href="http://www.hp.com/">Hewlett-Packard</a>
 jsp.layout.footer-default.feedback = Feedback
@@ -1322,6 +1323,9 @@ org.dspace.app.webui.jsptag.SelectEPersonTag.selectPeople = Select E-people...
 org.dspace.app.webui.jsptag.SelectEPersonTag.selectPerson = Select E-person...
 org.dspace.app.webui.jsptag.SelectEPersonTag.removeSelected = Remove Selected
 
+#the general-feed is the feed for all of DSpace
+org.dspace.app.webui.servlet.FeedServlet.general-feed.description = The DSpace digital repository system captures, stores, indexes, preserves, and distributes digital research material.
+#there are two more types of feeds: Collection and Community level feeds
 org.dspace.app.webui.servlet.FeedServlet.feed-type.collection = Collection
 org.dspace.app.webui.servlet.FeedServlet.feed-type.community = Community
 # In the following takes in feed type and the title of the collection/community
@@ -1331,6 +1335,7 @@ org.dspace.app.webui.servlet.FeedServlet.search.description = Search the Channel
 org.dspace.app.webui.servlet.FeedServlet.search.name = search
 # The following takes in the feed type (collection or community)
 org.dspace.app.webui.servlet.FeedServlet.search.title = The {0}''s search engine
+org.dspace.app.webui.servlet.FeedServlet.search.title.default = The DSpace search engine
 org.dspace.app.webui.servlet.FeedServlet.notitle = no title
 
 org.dspace.app.webui.servlet.admin.MetadataSchemaRegistryServlet.emptynamespace = The namespace cannot be empty.
